--- a/src/styles/PasswordGenerator.css
+++ b/src/styles/PasswordGenerator.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     width: 350px;
-    height: 470px;
 }
 
 .pswGenerator h3 {
@@ -44,10 +43,12 @@
     border: none;
     width: 90%;
     font-weight: bold;
+    font-size: 22px;
 }
 .copyButton {
     color: #A5FEAC;
     background-color: #24232B;
+    font-size: 18px;
     border: none;
 }
 
